--- a/Homework/Week1/tvseries.html
+++ b/Homework/Week1/tvseries.html
@@ -80,7 +80,7 @@ xmlns:fb="http://www.facebook.com/2008/fbml">
     <meta name="title" content="IMDb: Highest Rated TV Series With At Least 5000 Votes - IMDb" />
         <meta name="description" content="IMDb's advanced search allows you to run extremely powerful queries over all people and titles in the database. Find exactly what you're looking for!" />
         <meta property="og:description" content="IMDb's advanced search allows you to run extremely powerful queries over all people and titles in the database. Find exactly what you're looking for!" />
-        <meta name="request_id" content="0CET8HCZB07ZB0ZKSWSN" />
+        <meta name="request_id" content="1HZ3V0E515BWP5E34PHW" />
 
 <script>
     if (typeof uet == 'function') {
@@ -89,7 +89,7 @@ xmlns:fb="http://www.facebook.com/2008/fbml">
 </script>
   <script>(function(t){ (t.events = t.events || {})["csm_head_pre_css"] = new Date().getTime(); })(IMDbTimer);</script>
 <link rel="stylesheet" type="text/css" href="https://images-na.ssl-images-amazon.com/images/G/01/imdb/css/collections/consumersite-1697532865._CB498722962_.css" />
-<!-- h=ics-c42xl-3-1f-21167e82.us-east-1 -->
+<!-- h=ics-c42xl-1-1d-726fb01a.us-east-1 -->
 <link rel="stylesheet" type="text/css" href="https://images-na.ssl-images-amazon.com/images/G/01/imdb/css/site/consumer-navbar-mega-4258169922._CB498723852_.css" />
 <!--[if IE]><link rel="stylesheet" type="text/css" href="https://images-na.ssl-images-amazon.com/images/G/01/imdb/css/collections/ie-3579153447._CB498724035_.css" /><![endif]-->
 
@@ -521,13 +521,13 @@ https://images-na.ssl-images-amazon.com/images/G/01/imdb/images/navbar/imdbpro_m
         </li>
         <li class="social">
 
-    <a href="/offsite/?page-action=fol_fb&token=BCYnMvd-YDbGP2QkZbAJl1xg9CY69qRsq9_z2BedqBKFB68R-JPkadaUtq_hW-TZrGiFagko0Iaj%0D%0ATRTnaEccRF7AoX83TKfexEftsBsTppNvsh18fdVYGS_dq-8QL9qigNBgz86sybcQzaYcUgXHMycn%0D%0AL41a57U5DCsGkNCyqdtkGBuWZpt7aYHQXAtVRQB3QciKwzjsClrX_HB1PgnI3dkGEQ%0D%0A&ref_=ats_sr_nv_fol_fb"
+    <a href="/offsite/?page-action=fol_fb&token=BCYtpD4UojTPZ2m5boEvkaSvg5-OWEeRy8DVaBuO_HnDXG7-BEfdzIGmBKjWiKLJ6xIs0rNGHzgr%0D%0AfgGta0L-7LuYCHLf5Jdtvcs3Wdw9FHVcOmCySmEOR0eZAFdTTtRnjDSCjrUMvTvM4PxQ8RqhlBGM%0D%0AC1_HqV4ZICPBFXpPrTvwkvWjdh_u71_3PJ6PjIKLYM2iJOpqCasN3_2y-oQEsA-ymA%0D%0A&ref_=ats_sr_nv_fol_fb"
 title="Follow IMDb on Facebook" target="_blank" itemprop='url'> <span class="desktop-sprite follow-facebook" ></span>
 </a>
-    <a href="/offsite/?page-action=fol_tw&token=BCYgSdTlQqz1EwC_8WZd765fMwGyqMfyqayRHOfAN--8Z2PaPVhk6Z4QPb1ydtUKogbKm64-QeQR%0D%0ABseb1YSDf2XpAThkx4MD0f7w4V6V4tKVkCXW6uu5Tq77dJ_7HeH2O-N04EQdrXujM5lPSh7MMOH1%0D%0AGHd4_AnbDB_LekHs7y0evqQFOpp92GYGoTcvsSPFEqK-CQH12VFBqjeTJ-9RxWI0Mw%0D%0A&ref_=ats_sr_nv_fol_tw"
+    <a href="/offsite/?page-action=fol_tw&token=BCYvxyNMzjFFyli6Lul4M-ALBfKCbtVffDstvbDp2DUPCG9Sr8B_zdYx5_Pxrqv2Abo10femb0av%0D%0AnHy7nTvgy7fd5WhCfKuRh9uP9vxeqlK5fFWm27eQ-VjoMh5TZVJ85djQ6dv9FFdVGSjS3Ypc1Zh5%0D%0A3ST8YSyHb9LW5qFnd731vA0WuM90nV3DjZqQXxTxwvsaVvGz0k3Cf4YD2PPvYoh9xw%0D%0A&ref_=ats_sr_nv_fol_tw"
 title="Follow IMDb on Twitter" target="_blank" itemprop='url'> <span class="desktop-sprite follow-twitter" ></span>
 </a>
-    <a href="/offsite/?page-action=fol_inst&token=BCYm3q9BV3bEe8Ywlc_RZAmkTDe4BbOAwkIfYeQVsHb1-LshjCknDFP4nOijoT8Hk20q7zKu2AG0%0D%0AcrOHENgdARyeL6aS1bz4Pf66EIVU1hgp8r8rSGpsFg2pPVS0pthTlnIajDT5Mmtk8u2rKwjKqfBp%0D%0Aa9t20NjxAz1GGoCJGi7riLcDPEPAGxQJCxnpRODYe6jLonnnrckqkt6pt5SX3iM2Jw%0D%0A&ref_=ats_sr_nv_fol_inst"
+    <a href="/offsite/?page-action=fol_inst&token=BCYvWhnT0w5nwJkN-HpWaz9v2cCO6TpLryzuUWhemN6jJhUK0jq5UfmSdm3C4lMoNyHWIpjEw42E%0D%0Apgx8kw6JoJwMETpB3jrxl7286gcGEv3BoKeiEtkxG928hrdBtKHiEEYHJzhCCQA2y0xSexzvFLuq%0D%0A4l5z9j4cbbCTEWNV2665myeUOMgQh15s2EyLJPLiwGl73WLjFFvSz8XZ3cC-FcB2IA%0D%0A&ref_=ats_sr_nv_fol_inst"
 title="Follow IMDb on Instagram" target="_blank" itemprop='url'> <span class="desktop-sprite follow-instagram" ></span>
 </a>
         </li>
@@ -5573,13 +5573,13 @@ class="lister-page-next next-page" ref-marker=adv_nxt>Next &#187;</a>
                 <div class="col outside">
     <h3>IMDb Everywhere</h3>
     <div class="app-links">
-    <a href="/offsite/?page-action=ft_app_apple&token=BCYvWHaVbXzi3Ga3veUFy03VQeFMuu5eKQYMkdT5f5HZFaP8SfZWyEJkW6M1UBLScQnz1jdj2qeZ%0D%0A561rRGWFJXbAN8-XecNV2Oe2IoQ2TKpTKbk8rGF0L-LCvEA6D6qaIA3mkSAhpkhJnO5oC0RQdrMy%0D%0AtjlCRFAqRNMq0hHXituPYfAnMbCS_BE-Un318O4eSGQCnLjH7fwNsnBMxAxWEXxyO8cPMST7DPz6%0D%0AeN223aAONxA%0D%0A&ref_=ft_app_apple"
+    <a href="/offsite/?page-action=ft_app_apple&token=BCYvXIcalsKCJ2anlvKFxgI88koQ9CLS3a7Da0tsk0pnUthA45veMEo49Ad-TxqKLIGglb-sGOAr%0D%0ANZRhZ3A4sBcg-SRFTKzBK3t_WtxIu-cOU74EzmRMnM5be1ZSKo6pThxKoLIKBfS53CGVwUJtSqaM%0D%0As47VgTOQSjk0MCHYqu2_2nY98STB2wYVmb02p7HQMyTupu1AbCxGGWFqV5irFyAHSaLYPjPcF3rN%0D%0AGcykKBcGA4w%0D%0A&ref_=ft_app_apple"
 title="Get the IMDb App on the Apple App Store" target="_blank" itemprop='url'> <span class="desktop-sprite appstore-apple" ></span>
 </a>
-    <a href="/offsite/?page-action=ft_app_google&token=BCYlpgc6wkGKGH9mFG7htigMCn-EvcdPLQUxMvjK3-4iVHTedWxK2Vtf_i9h8RFGY4z7yT_vUo6V%0D%0AtMRyDb_f00O4fMRUwzwcZC_sC_LAptoqpQFArnAtNYqbuWwj-573SsbDbDoI_GO42SJ-BA0e_GGe%0D%0AJB7gbUitcUGGxixSQ75a9FD4R0JPYnn4GvJA5Br_AN5Bh7EULisNt3Qp-5zYnrHeI2rFTPT3_833%0D%0AhNx23drT13U%0D%0A&ref_=ft_app_google"
+    <a href="/offsite/?page-action=ft_app_google&token=BCYgorlZw4msOCIGnz8K194x47sbKTAizyhNqWvk0afVensU774HTh6XevfaQXn1jkaJP8R3A5ze%0D%0AF10SeaKgF2P2XV3NFn_A80bladnplJpb797xplopqv4N0-ZOY1S1yu4rIhFfTa3xs5c181RqOUT8%0D%0AXhoEAvtCjgZmOdl6xeIelecTDkBTY7dfGZz8CpWQmTjp3ES8Wg9m5XyV49BDKMXu29UIYlh_JG9Y%0D%0A4AJ7kv5p29g%0D%0A&ref_=ft_app_google"
 title="Get the IMDb app on Google Play" target="_blank" itemprop='url'> <span class="desktop-sprite appstore-google" ></span>
 </a>
-    <a href="/offsite/?page-action=ft_app_amazon&token=BCYtV6snCA0Vx9_CDPmfA3eVxbH6RI_p8SZGKvcWWAl7YtG-uGYTab0k3zS9B6tLYr1bicvuWhbV%0D%0Ae7v9kwcV6LworKNvP_BX5mfq0JCjblB6HaF4IaF8gSKIKEX3vh3fckqBQV07XIN6tiIopOKXtJNp%0D%0ALZWJPFen_AiLTSL1eB54o3jPP9vnzvSjmtfL1KYEG0J8sDp6y7dz1eQdO4Kae3pibTKtN7xl7zUq%0D%0AJZjdjHMu48SkIyzR_Q4KjSv06TY8CgIGK7O1kmc6D4tGnq3Vm3z9soEPoAtqELwxajdn7gHGKiFq%0D%0AjiK6HJ58wWPBCgE-PwV9vfyElwdz16K_u4T3aNGRfcGBlGadEdjZasWvqvGvN_6wPtrmqBtwRzQm%0D%0ATt5DBS2m3BH2Y7iY0kQywNslmzIUprh1NrfXplXSTuQNm5SLq3o%0D%0A&ref_=ft_app_amazon"
+    <a href="/offsite/?page-action=ft_app_amazon&token=BCYnWBIDzIaTZcJ-3PoauzWD6LNcV_tUd8SsR8xqnn1bP8ZqBnrdngi0T5Z0Y9Blk_5KIDeLqpKY%0D%0ANWvNyEOGWN3b_IQDi4Tqa465BBI11A4u-85FpXsb1PSpszn5QfeMnZMKuHI-eEa5a5W2fIz_bxZd%0D%0ACAoAbcvYwdHDfW2SqCkK0XzyD_bWNF6HYGix_XmrWkWmkCwcLhWnm-YH2axNk8r6YEtzYvwVGejZ%0D%0ArVXOb6mIztuBx2Em_FPjNtRfoIlDlLgxIfUrtT43k43Yi2O1lOkagcNAW0_3_U29flcUFfruvBW7%0D%0A2AXRwPIZXi3y-igOOPoyzlX6AVMVog8PT-PjcudjL4UzA6-qj_BGkBjSQh7bBv69TMjMMYJapraQ%0D%0AUtaQ-irD02oP7Nj46ciaXSeZxb-lVG4s9oUPG4PzslbtftZM_18%0D%0A&ref_=ft_app_amazon"
 title="Get the IMDb app on Amazon Appstore for Android" target="_blank" itemprop='url'> <span class="desktop-sprite appstore-amazon" ></span>
 </a>
     </div>
@@ -5595,13 +5595,13 @@ class="touchlink" >IMDb Mobile site</a>
       Follow IMDb on
       <div>
 
-    <a href="/offsite/?page-action=fol_fb&token=BCYrx2lCyVQBiYzwS7S2sd4oSc3jl0GDlgZclkkq8mQk4LiIe_JkoZVeOHtITpMURMkzau_9FayP%0D%0Ao6Wo3ZLqHQY73k4Cvk125ok5d9oOZxx6gzD-g6l5pKm_BzJhWGA1eR-P2vf2nOMbgBAiT-RhKBpl%0D%0AnKc6UoQ6Nl1qocb7O-6ReFYi-CEeUppAopRMebBkxAhzOJDpy0AS9hCv6S0EnKgKvQ%0D%0A&ref_=ats_sr_ft_fol_fb"
+    <a href="/offsite/?page-action=fol_fb&token=BCYmwRZ-R_XDy0VAF-FvuE4KuRy0soPYs5eqlUuA6-47C6dwTUfTv924LlV2Fw_99zc5Ym1xOYru%0D%0ArqoRiT4i7ToYrl-8atYSNCmYcJBkDpK1P3Du26vbCShJrfQOlLkA-fN0DOXD7CKpaycwhpC2CVv-%0D%0AG63UahAJPeYenVdOQS1QGe2TmQ16zIqmkhlutqOOoM4T2uBqUbZGkQh4shtDR8YzAQ%0D%0A&ref_=ats_sr_ft_fol_fb"
 title="Follow IMDb on Facebook" target="_blank" itemprop='url'> <span class="desktop-sprite follow-facebook" ></span>
 </a>
-    <a href="/offsite/?page-action=fol_tw&token=BCYg3j0qdGeks6g96nx9JuTV50vGbK4Fv4WjflvTPgZ0fmw8IlFFmB9RZwwOo8Nhog2L-YrRbqC0%0D%0A4yZRq7eHiOsYkHXPNePvXORZLsDnzXJfmr8xbD81zzLM11qaLcGRl5Eyowx0mv7NSP2wx8rMb7il%0D%0Ay6egqkDXQZvYXOdt3qcqgPFIDSWzO8gC7WfI2JKPcmprzkpFQr1exaGNPXfYj0DmWg%0D%0A&ref_=ats_sr_ft_fol_tw"
+    <a href="/offsite/?page-action=fol_tw&token=BCYlbl5lVZl1nWbGwbbyRGfXAxHiwzrlIFZ5VDppWP7gi85Nuo1uNrsxzpULB9N2vOZq62RBCsO2%0D%0AoUe_mXfenuBTitzhlyUPHt-jdE9O2I9iMt-pCPV8_PP5M_ZaQeeBNymwo1AoSht-VHVDfisunqV3%0D%0ATYaAWzMoxasDcxZBPMvWlFRENECOkYbRyL9X7Cl9-BcJfq1lbF2EtNf7VVIe4GbMQg%0D%0A&ref_=ats_sr_ft_fol_tw"
 title="Follow IMDb on Twitter" target="_blank" itemprop='url'> <span class="desktop-sprite follow-twitter" ></span>
 </a>
-    <a href="/offsite/?page-action=fol_inst&token=BCYij8MEyQPq8BaeeYRWnHRT4lqR_QEgeu-WuylHvOt6Ae0NqJ63lPRZeI9Z3texc5GKFAHH5VU7%0D%0A0WFtWmWXGQxCUM6uGZZAwdHhzczQiqXX9Eu-9Qi-G_ph5OC8zqSI26sGCn1KhQ5blsDSCT6ezAGg%0D%0A-ah2Ih39u6_kiDP-7vFbKhWRmLT_W9sg1_7-DV6uqI81XpP7XFXg_tBCQDnKzS85tw%0D%0A&ref_=ats_sr_ft_fol_inst"
+    <a href="/offsite/?page-action=fol_inst&token=BCYokmNzeW-qKRG-NR860EyP1OfSg2CGZtOJRKvhLAEqSbfD0WK0jwPzQwHHFn0uay1DPmg7IPJB%0D%0AKSNUDHECsu7Gabgke69sVrSidGoAiCumQsEvcloKr1HuCw2zo7HqW_rvQNYn1jK6b-P26GYiWtqC%0D%0AS8liH9kaiLIkxpO55y0xHRskh-7Vvwb1kV11XZ77c6cYhLoBk6asTBUvcg507c3o4w%0D%0A&ref_=ats_sr_ft_fol_inst"
 title="Follow IMDb on Instagram" target="_blank" itemprop='url'> <span class="desktop-sprite follow-instagram" ></span>
 </a>
       </div>
@@ -5652,10 +5652,10 @@ title="Follow IMDb on Instagram" target="_blank" itemprop='url'> <span class="de
             <ul class="unstyled">
                 <li><a href="https://pro.imdb.com/signup/index.html?rf=cons_ft_hm&ref_=cons_ft_hm"
 >IMDbPro</a></li>
-                <li>    <a href="/offsite/?page-action=ft-mojo&token=BCYjN6mttRoh4BCwcE0T7Po3RIMx9fZPbse7Xrt1Oi1FqVX6oqOI1jMrUqCmZY2hCicKYA3UJsah%0D%0AQptIPxXuUltpGSEyX2amiqfEIeqw7lv1d2yYdECpnVjtw2APLdxFwP0ASgIGvcWh2WrlpcFpNffM%0D%0Am_sgjMP6XgkfJmRZ5YkJgjWGSA-jr7grsE59SoK5-ZXTCWFlJKrnLVP_Y0JgTUfFDw%0D%0A&ref_=ft_bom"
+                <li>    <a href="/offsite/?page-action=ft-mojo&token=BCYv69OwpLVHryidq0OTOK1icfpPF4_soWWZurpLY0fGHZYTXOA6qmoNPfxCSV781vpreIZONes_%0D%0AkieBc4Y0UMSbihKunCC6NrsTPO_pjEg9XMoSRR-LHjk9F7FK4cBS_MpcdQ7B01Aeam3aNtMyJqZv%0D%0APTqZrYK3BBqIACYE_xzxKjdS9LH7RR9kV_0vGjzL1Pcv_0GwlKxnRnNSmaqY0CrwCQ%0D%0A&ref_=ft_bom"
 itemprop='url'>Box Office Mojo</a>
 </li>
-                <li>    <a href="/offsite/?page-action=ft-wab&token=BCYvw72h-ngGbnNo_bZrusjLyQBcbIs_rB_064NJ-tEhXiBAG1GPEq-bUE4cGggLjpm4T5wQgMGm%0D%0Axhk9mOo8rzpXev3F8X6KpheRefeToLCdPO3MeaViQkTrjeXqOFTtgbQHrpcrAlFv7bGO1DftHnGQ%0D%0AuY4SbXwHktR7Nzxsl2ui7THfhOatCqVbpp_5Lj7A9UGr%0D%0A&ref_=ft_wab"
+                <li>    <a href="/offsite/?page-action=ft-wab&token=BCYjJdVca90Vyzt_eiTXzQEO67aTsjLy64fKNcCDgRHfyAax5No2UPaPdOvx2MrtnIpH0Ia3XQed%0D%0AopQ-reRIf2GWojXe-AN5UlKRZX5QunQZDH2hvqvqAv_eBqDCMPF86JYS6x_0DliW5-RiCaVHHuyF%0D%0AnZP1Jt-puaehlqD4UJ-ItVarChNpRhbty_S48_aDM8e4%0D%0A&ref_=ft_wab"
 itemprop='url'>Withoutabox</a>
 </li>
                 <li class="spacer"></li>
@@ -5663,7 +5663,7 @@ itemprop='url'>Withoutabox</a>
 >Conditions of Use</a></li>
                 <li><a href="/privacy?ref_=ft_pvc"
 >Privacy Policy</a></li>
-                <li>    <a href="/offsite/?page-action=ft-iba&token=BCYkmGulEvqBW9rJxi3nMJhLQErIInxyRJef31iqsCqqgRGzGe3CAWxs6AOkuzbBqAhhimk8pMhT%0D%0AQ153MF2YJMDUp1iCtbFPSAulGPK4NnBBfVFSUk-VeOQidLuG_LejZ9I_HCDgEB78Urj9sft1bx0H%0D%0A_84gnlHY62zGGuwnI3TyUs_vWMW3ajQkTLKa4YXW2-aZ7BshsGaRu7w924Alk4rhdD6i6yZzaMt1%0D%0AfbabEcw-g88Xu7TzxXdrhm-Go13MjSkT%0D%0A&ref_=ft_iba"
+                <li>    <a href="/offsite/?page-action=ft-iba&token=BCYkck8lfEEZ4ZDmh60OnOHWwqHI9JefKB7l-t9Yom2qjfrOksnXk1mUIVFhqs3ASJE1f0FeMS9F%0D%0AOrGu1rw6jF3ezCazSZLYOh8nOTX1IEEv94Wyt2G9kZVOR4XxF2QwM67vJrpf3MHR-rb50mS1QkY1%0D%0AQSjROO8t92JLPlfBvT_PDglw2b6O4031Ns-VzicHyNZg1KAGNkNN1Ot0o8QgG3g4vgl-8Oogz7yG%0D%0Ax3YZRUwK8D-wsmm6_3PQp0IyyJzgHtSm%0D%0A&ref_=ft_iba"
 itemprop='url'>Interest-Based Ads</a>
 </li>
                 <li class="spacer"></li>
@@ -5698,7 +5698,7 @@ itemprop='url'>Interest-Based Ads</a>
 
     <td>
         <div>
-            <a href="/offsite/?page-action=ft-aiv&token=BCYg2ujooXG7TWZO8tXPghoLHtrypr9f1KazgSruIdGfqCTwU1t1rGDgg4E7MhBZMHvyF4iKzdj2%0D%0ASTp5JRyxNLouFZxDrrQKuXXsEKFCvqtFVT8ECZi-tT87-UBYLkE0oBxfohJxTnArzG6j22Api5Ft%0D%0AW7g4sk8x5vdImT9k_jpbAVxPNDl_Cv1I-p4SpCkbbTp7BuLXGbcAzaXVbQG8pDhXxWsUbkraAkay%0D%0Am7YaxLpGHZ8%0D%0A" class="amazon-affiliate-site-link">
+            <a href="/offsite/?page-action=ft-aiv&token=BCYswnVrOWBrlyqFxsMC7p_ZxH9MGzg05iPEeSkIqyVt_JoAASaGu-bjgq7_d5tC5J-vUrEIaF8F%0D%0AC_YLHqD15pqbUK1UrdMm8OcrL-zTR-zMgdTlvr2C35z_5w3dnImXXJ2xPvTjI6woVZyWDbpX-PCU%0D%0AkWl4U29qlHZyieLSKMYVuBSHTZEPbcYXmS-s0WIMZ7WetZpXhkKMT06r1qxnURAbYS_RqnserNd0%0D%0AIl5_fYOahGY%0D%0A" class="amazon-affiliate-site-link">
                 <span class="amazon-affiliate-site-name">Amazon Video</span><br>
                 <span class="amazon-affiliate-site-desc">Watch Movies &<br>TV Online</span>
             </a>
@@ -5707,7 +5707,7 @@ itemprop='url'>Interest-Based Ads</a>
 
     <td>
         <div>
-            <a href="/offsite/?page-action=ft-piv&token=BCYmn242rnMCN15mWIxwLhMJvhZSwJXmYp5w0N7-RChPdYPv5ZWudDxUtsQe0qYkNPPOWf1VBvAq%0D%0AzdEUgowKFtp3CU6UtNNNyt3_gUB4UpHmiPPBucVNyYgtP-2dkZvjsgARpaYSfdc97GS5_KZ402Xe%0D%0AGSC2QGanNqoS4DP0fyPwKWXR_mfY9IkkkUfySA2aRQzlm6OSCiY9sK6I1uvDofvCPW0-74x4abfq%0D%0AWaETNy7yaN4%0D%0A" class="amazon-affiliate-site-link">
+            <a href="/offsite/?page-action=ft-piv&token=BCYh-3sQCyYsASW0jJrQoJm6_AjqQ7C_GyDQMUz-qYZTSJeW9-lYE4WKLeZnz9k2DS1J07uf6-pp%0D%0Aq0qJCjMQVkYAd-DxCVjnQYuMKtCZw6QRQmso9rceGDc5uVZj-SEKA4VCDLWuGmB3JWLjVfWLbBpe%0D%0AINDdaiXfUxyuJkRjccwQ6nB-LqjID5S5T06lseLvCvHcATl703gaKQiCac_Ryk2uRHrsxVCBFed-%0D%0Acz3AY7z4meE%0D%0A" class="amazon-affiliate-site-link">
                 <span class="amazon-affiliate-site-name">Prime Video</span><br>
                 <span class="amazon-affiliate-site-desc">Unlimited Streaming<br>of Movies & TV</span>
             </a>
@@ -5716,7 +5716,7 @@ itemprop='url'>Interest-Based Ads</a>
 
     <td>
         <div>
-            <a href="/offsite/?page-action=ft-amzn-de&token=BCYtRPC2bgRf5YxBmuoSUkNXrKx9uk5ICifowkNubSL57341epRJSKsZ6sMNhxCJ6I8Mo5z3PpuW%0D%0Aa1w-K--Lp6f54w1BpdECCO34x1pnpcwpplksayi2qVzubPutBRHInO0qp0hBDYeGD3vYjMb0dLHv%0D%0AGvI4ZlUNCCaF1EuEmu359R0iaMSA9vPEB0IylH4yLKP0ki_feDS0qrBsUjPN3h_2tHpnIOEWvlrK%0D%0AU49vxPX-zaA%0D%0A" class="amazon-affiliate-site-link">
+            <a href="/offsite/?page-action=ft-amzn-de&token=BCYgujEbLxEV87byIvqY1-HAE6Z6fzZpQYOGvjiYwdl2BdgsKuPtki6UuRPaQjdXyR3j03064eao%0D%0Asnj0IHOpcS3lcO39kooFl__xzZtvFI9njE3zOUIuY8ZXnKYuW3jTfk1zCE7uu0js391l7awcizdZ%0D%0AKciNQXZbZs8S7ue39FOBlwwcjgu9BePn9inkSdzKwgmutuyoe3FQeBV9tqrhxnwsWqZROpKcV4Go%0D%0AKn373dtI8PY%0D%0A" class="amazon-affiliate-site-link">
                 <span class="amazon-affiliate-site-name">Amazon Germany</span><br>
                 <span class="amazon-affiliate-site-desc">Buy Movies on<br>DVD & Blu-ray</span>
             </a>
@@ -5725,7 +5725,7 @@ itemprop='url'>Interest-Based Ads</a>
 
     <td>
         <div>
-            <a href="/offsite/?page-action=ft-amzn-it&token=BCYqa4sB_HRPpydtYK1D8XKKc3zw-wtz9H3xhkj6sCciLIBSqNlpPlQu1G521VEFgf8vmWZ2BVE7%0D%0AuDKOpeVsK0mDnx3jwsqWn9E37dALHhcYafLbDR70Y_WJmMEnV44dQOQIyHdqJCo4w4GHJLyCLF-p%0D%0AMY353XRSOHxQO1LTQrkx3D0AbHuOmdMm8zLOgs3k1fKKM_ZC_Y8ZMKF-BynhBbgVM9TXlpvrwbNU%0D%0APDmTDADUSpw%0D%0A" class="amazon-affiliate-site-link">
+            <a href="/offsite/?page-action=ft-amzn-it&token=BCYvf4Sd8vYcB4dUIRMfbiSxQdDsUf_eMNtuH5D7A8txKUho2DBNCGv1Qby-RBB-4CT7jugXnxZP%0D%0A0M39eWGQKZyulAQ2i9f83UhaaGAlJK-KZ_Cw9Vgh-YO-SsdZEZMwjqG-9ElD_PIChlvQ02Zq5Nn3%0D%0AUGlPrhEKv8yN1ZYSj8FTyw0Xjo61KqbEoPZ-0CfWx3G6MVVHxO6MoI-d3yS-drMlOdobf0cVSXIz%0D%0A3El_rGCl4QE%0D%0A" class="amazon-affiliate-site-link">
                 <span class="amazon-affiliate-site-name">Amazon Italy</span><br>
                 <span class="amazon-affiliate-site-desc">Buy Movies on<br>DVD & Blu-ray</span>
             </a>
@@ -5734,7 +5734,7 @@ itemprop='url'>Interest-Based Ads</a>
 
     <td>
         <div>
-            <a href="/offsite/?page-action=ft-amzn-fr&token=BCYiyPmgWiF_bbAdFlUJoC_wfTfj8QFLX9qpvnADViX61CtzF5c45YONT4yf2anKk7kyqZRlMDNe%0D%0A-16ldN0P4NxTCkgiW5zV-z6PwFsaUojGLbLS5jwavU6ORuLW7NHlffj2mDZ1zl7wD5GVOv48LPFY%0D%0A36mcC3_fgkmi2ag3TEAUuEPc4TcGuhOoDbb9F6mlJYlBLKq_X_eKgZF7ADA8ReZHrNaYt41ksQk9%0D%0Awcf-NZcMCEo%0D%0A" class="amazon-affiliate-site-link">
+            <a href="/offsite/?page-action=ft-amzn-fr&token=BCYs3Ic3Az1SPnCBx7gDPBgWs56AVtiJdj-0fUbo0PAuVCLe7Oq-nJMttYo7eLJkXoo5Fp1HnDSY%0D%0ACfJm5tDHiBIy1VzFuB-vmeycdcB_cdZHKSvcoN-Pa_UFz0iVad4O7hEBX5gBtEDgZtYq5G7Y2IVK%0D%0AL5ELo8GCfxkYlLCAR45x7N0Li3HKQcATQI3zONNKve5geXIEmKHDq89QTXqA4jT-71pUuOZu3IdY%0D%0AzrFNASvJ2iQ%0D%0A" class="amazon-affiliate-site-link">
                 <span class="amazon-affiliate-site-name">Amazon France</span><br>
                 <span class="amazon-affiliate-site-desc">Buy Movies on<br>DVD & Blu-ray</span>
             </a>
@@ -5743,7 +5743,7 @@ itemprop='url'>Interest-Based Ads</a>
 
     <td>
         <div>
-            <a href="/offsite/?page-action=ft-amzn-in&token=BCYs0GCAeo9BRpOgeTzxLgtk-v3L1WfBG20sTeZeTP_14PGxwhd7fBrxYZC6lHbqrTAVYS-wSNGd%0D%0A5A-YGcbdgrTpmnyUnQ_r6PeUaS0ZfmqZ36n5Cgr6Y7JPYD4eKfOPconKRTVkUqAcTtlWmLy3owbS%0D%0AHl5_H6tEDwovVZZIKrs3Qn0tF9wPgaO-vKCrwaiHyeTWJ0QZ-vlaR-dWgkdMQj2kBCJrzkmO7JA-%0D%0ApInB_j3RTyuo-cVMghVWWLk6QP06_UOY%0D%0A" class="amazon-affiliate-site-link">
+            <a href="/offsite/?page-action=ft-amzn-in&token=BCYnYtaC7rW1-c37u56R7MQzDuUmxsU04BSh3MeVX9PxauP-miGUcidcFmMC_UGWW6UAExKXA4kn%0D%0Av8RjOe3MjSLPiL4z-gq0LwuOGjKDOOtn6DV1E6SM-JEQ30pPePaOSAmrqBxbryZ4LSFZjkzpRZkx%0D%0ApsGaiPefacjPzWO5QSSZL-PDMURv5oBwapfpB3A8I1mON1hKgngxsMk1Q1p1BjSqX7WPTpKxSStc%0D%0A5tTj88XiSVv2nTHg8wPTl-xPu08NOfOa%0D%0A" class="amazon-affiliate-site-link">
                 <span class="amazon-affiliate-site-name">Amazon India</span><br>
                 <span class="amazon-affiliate-site-desc">Buy Movie and<br>TV Show DVDs</span>
             </a>
@@ -5752,7 +5752,7 @@ itemprop='url'>Interest-Based Ads</a>
 
     <td>
         <div>
-            <a href="/offsite/?page-action=ft-amzn-dpr&token=BCYssIOPQlSI810rUqwYZXzf_B6seZojQsJW_Ob9sdsaNM2hzJyJTNXf7jF_1ph0NdPDiQrbNS4f%0D%0AXOMJzvot2MF5Wl1nf_Nlb8FwP4ObqiMx9pSVVPUy31kUN_J9pnaLL8lQvfuKk8up5krXy6GZlqq3%0D%0AGD8BtWdVgguZElb8_jhp5Gs%0D%0A" class="amazon-affiliate-site-link">
+            <a href="/offsite/?page-action=ft-amzn-dpr&token=BCYuQHt_-gFnIFpzP1MJQjz2zfOryEkNQJLbJ_6dwn6LojwVkCGVVYOt1YVEth-pV84dBWPjjJPX%0D%0AEr-dp1boa8GCD7lYcC8SV0TzkV5eDvnIAh3jvdvc0kPVaM-BwOx2ojhhO-accjZV0ifEpmsSh3mT%0D%0ARgbVNq0TX1pv_QQk4JBGmb4%0D%0A" class="amazon-affiliate-site-link">
                 <span class="amazon-affiliate-site-name">DPReview</span><br>
                 <span class="amazon-affiliate-site-desc">Digital<br>Photography</span>
             </a>
@@ -5761,7 +5761,7 @@ itemprop='url'>Interest-Based Ads</a>
 
     <td>
         <div>
-            <a href="/offsite/?page-action=ft-amzn-aud&token=BCYvqRBZX8HwLCIugR98usBSphs_ElWB8s5IfGKtcyhiDdQhnLjwwq6bYKDEiJERHt5lJ1e6ap1J%0D%0ALW8fzlEmrvx5c5w7YjF7Cbqn8xLu4Z1L6iwdeVsUKEJJG3aOzgGTxCdT4g4WPno7MoFK4Cjx3prQ%0D%0ATcH1nKj6WsY7U_Jk-j2bFAY%0D%0A" class="amazon-affiliate-site-link">
+            <a href="/offsite/?page-action=ft-amzn-aud&token=BCYiKbdDm-mXIGyPztVOrgPFheBgrLFZp35Vbiwu3BATstI46-7OBfrlqRjCn08tIjCXzjAVKhEs%0D%0ANm4NT1esVXlMfziQDJdumw4wNkoQ7yYl8Sz8xrD6AvvDu1_rRZi_88fbGznbiumZ1a8-dvdD5_H0%0D%0AVHT9cy7TA0hpzDpIZb6IWvQ%0D%0A" class="amazon-affiliate-site-link">
                 <span class="amazon-affiliate-site-name">Audible</span><br>
                 <span class="amazon-affiliate-site-desc">Download<br>Audio Books</span>
             </a>
@@ -5816,7 +5816,7 @@ itemprop='url'>Interest-Based Ads</a>
         </script>
 
 
-<div id="servertime" time="156"/>
+<div id="servertime" time="176"/>
 
 
 
