--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-https://pernilledeijlen.github.io/DataProcessing/Homework/Week2/temp.html
+
+
+[graph](https://pernilledeijlen.github.io/DataProcessing/Homework/Week2/temp.html)
