--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+<html>
+  <head>
+    <title>My Homepage</title>
+  </head>
 
 
-[graph](https://pernilledeijlen.github.io/DataProcessing/Homework/Week2/temp.html)
+  <body>
+    <h1>My homepage!</h1>
+    
+    <h2>
+        Assignment Week2
+        https://pernilledeijlen.github.io/DataProcessing/Homework/Week2/temp.html
+    </h2>
+
+  </body>
+</html>
