--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
 
   <body>
     <h1>My homepage!</h1>
-    
-    <h2>
-        Assignment Week2
-        https://pernilledeijlen.github.io/DataProcessing/Homework/Week2/temp.html
-    </h2>
-
+    <a href="https://pernilledeijlen.github.io/DataProcessing/Homework/Week2/temp.html">Assignment Week2</a>
   </body>
 </html>
