--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 
   <body>
-    <h1>My homepage!</h1>
+    <h1>My Data-Processing homepage!</h1>
     <a href="https://pernilledeijlen.github.io/DataProcessing/Homework/Week2/temp.html">Assignment Week2</a>
   </body>
 </html>
