--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <a href="https://pernilledeijlen.github.io/DataProcessing/Homework/Week2/temp.html">Assignment Week2: Line Graph</a>
     
     <a href="https://pernilledeijlen.github.io/DataProcessing/Homework/Week3/index.html">Assignment Week3: Bar Chart</a>
+
+    <a href="https://pernilledeijlen.github.io/DataProcessing/Homework/Week3/scatter.html">Assignment Week4: Scatterplot</a>
+
   </body>
 </html>
