--- a/Homework/Week4/scatter.html
+++ b/Homework/Week4/scatter.html
@@ -10,7 +10,7 @@
   	<h3> Pernille Deijlen</h3>
   	<h3> 10747354</h3>
   	<h1> Scatterplot on women in the workfield</h1>
-  	<p> Explaining the graph...</p>
+  	<p> This scatterplot shows the relationship between how many of the employed are female employers and the difference in average income of man and women in 14 countries in the year 2004. Source: OECD data library.</p>
     <script src="scatter.js"></script>
   </body>
 </html>
