--- a/Homework/Week5/linked.html
+++ b/Homework/Week5/linked.html
@@ -6,6 +6,7 @@
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="http://d3js.org/topojson.v1.min.js"></script>
     <script src="http://d3js.org/queue.v1.min.js"></script>
+    <script src="http://d3js.org/d3-scale.v2.min.js"></script>
   </head>
   <body>
   	<h3> Pernille Deijlen</h3>
