--- a/Homework/Week5/linked.html
+++ b/Homework/Week5/linked.html
@@ -17,7 +17,7 @@ Linked Views -->
   	<h3> Pernille Deijlen</h3>
   	<h3> 10747354</h3>
   	<h1> Europe and its labour force</h1>
-  	<p> Below a map of Europe. The colors show the size of the labour force for each country, the darker the bigger. When you hover over the map you will see the exact amounts and when you click on a country it shows the labour force in more detail. Grey countries on the map unfortunately don't have any data available. Source: OECD.</p>
+  	<p> Below a map of Europe. The colors show the size of the labour force for each country in 2014, the darker the bigger. When you hover over the map you will see the exact amounts and when you click on a country it shows the labour force in more detail. Grey countries on the map unfortunately don't have any data available. Source: OECD.</p>
     <div id="container" style="position: relative; width: 600px; height: 400px;"></div>
     <script src="linked.js"></script>    
   </body>
