--- a/Homework/Week5/linked.html
+++ b/Homework/Week5/linked.html
@@ -8,7 +8,7 @@ Linked Views -->
   	<title> Linked Views</title>
     <link rel="stylesheet" type="text/css" href="linked.css">
     <script src="https://d3js.org/d3.v3.min.js"></script>
-    <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+    <script src="https://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
     <script src="https://d3js.org/queue.v1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
     <script src="datamaps.world.min.js"></script>   
