--- a/Homework/Week5/linked.html
+++ b/Homework/Week5/linked.html
@@ -6,6 +6,8 @@ Linked Views -->
 <html>
   <head>
   	<title> Linked Views</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="linked.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <script src="https://d3js.org/d3.v3.min.js"></script>
@@ -16,11 +18,36 @@ Linked Views -->
   </head>
   
   <body>
-  	<h3> Pernille Deijlen</h3>
-  	<h3> 10747354</h3>
-  	<h1> Europe and its labour force</h1>
-  	<p> Below a map of Europe. The colors show the size of the labour force for each country in 2014, the darker the bigger. When you hover over the map you will see the exact amounts and when you click on a country it shows the labour force in more detail. Grey countries on the map unfortunately don't have any data available.<br> Source: OECD.
-    </p>
+  	<h4> Pernille Deijlen</h4>
+  	<h4> 10747354</h4>
+  	<div class="alert alert-warning alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span>
+      </button>
+      <strong>Welcome!</strong> Check this page for some data on employment in Europe!
+    </div>
+
+    <h1> Europe and its labour force</h1>
+  	<p> Below a map of Europe. The colors show the size of the labour force for each country in 2014, the darker the bigger. When you hover over the map you will see the exact amounts and when you click on a country it shows the labour force in more detail. For more information on the variables shown in the bar chart, select them below in the drop down menu (does not work yet unfortunately). Grey countries on the map unfortunately don't have any data available.
+    <blockquote> Datasource: OECD. </blockquote> </p>    
+ 
+    <div class="dropdown">
+      <button class="btn btn-info dropdown-toggle" type="button" data-toggle="dropdown">Choose a variable<span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu">
+        <li><a href="#">Unemployment</a></li>
+        <li><a href="#">Self employed</a></li>
+        <li><a href="#">Labourforce male</a></li>
+        <li><a href="#">Labourforce female</a></li>
+        <li><a href="#">Employed in Services</a></li>
+        <li><a href="#">Employed male</a></li>
+        <li><a href="#">Employed in Industries</a></li>
+        <li><a href="#">Employed female</a></li>
+        <li><a href="#">Employed in Agriculture</a></li>
+        <li><a href="#">Employed</a></li>
+
+      </ul>
+    </div>
+    
     <div id="container" style="position: relative; width: 600px; height: 400px;"></div>
     <script src="linked.js"></script> 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
